# MLOps-Project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-simple.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  model-training.yml
airflow/dags/: monitoring_pipeline.py  training_pipeline.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.training  airflow-entrypoint.sh
monitoring/: alert_rules.yml  prometheus.yml
scripts/: download_production_model.py  send_drift_alert.py  send_notification.py  setup.py  simple_notification.py  update_monitoring.py  validate_installation.py  validate_model.py
src/: __init__.py  config.py
src/api/: main.py
src/data/: preprocessing.py
src/models/: predict.py  retrain_full_pipeline.py  temp.py  train.py
src/monitoring/: data_drift.py
tests/: __init__.py  health_checks.py  payload.json  smoke_tests.py  test_api.py  test_preprocessing.py
